# pprl_toolkit

./: .env.example  .flake8  .gitignore  .nojekyll  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  _quarto.yml  index.html  index.qmd  listings.json  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  feature-idea.md
.github/workflows/: ci.yml  docs.yml
docs/reference/: bloom_filters.html  cloud.html  config.html  embedder.html  encryption.html  features.html  index.html  local.html  perform.html  utils.html
docs/tutorials/: 00-getting-started.qmd  01-in-the-cloud.qmd  01-setup-server.qmd  02-client.qmd  03-run-server.qmd  example-febrl.html  example-febrl.qmd  example-verknupfung.html  example-verknupfung.qmd  in-the-cloud.html  in-the-cloud.qmd  index.html  index.qmd  linkage_example_febrl.qmd  linkage_example_verknupfung.qmd  readme-overflow.md  run-through.html  run-through.qmd  working_in_the_cloud.md
scripts/: 01-setup-party-resources.sh  02-setup-workload-operator.sh  03-setup-workload-author.sh  04-authorise-workload.sh  05-run-workload.sh  06-tear-down-operator.sh  06-tear-down.sh  07-tear-down-author.sh  08-tear-down-party.sh  common.sh  server.py
site_libs/bootstrap/: bootstrap-dark.min.css  bootstrap.min.css
src/pprl/: __init__.py  config.py  encryption.py
test/: test_config.py  test_encryption.py
test/app/: conftest.py  test_file_selector.py  test_utils.py
test/embedder/: __init__.py  strategies.py  test_bloom_filters.py  test_embedder.py  test_features.py
test/matching/: test_perform.py
(+19 files in other folders)
